added some global values

--- a/partials/head.html
+++ b/partials/head.html
@@ -4,6 +4,6 @@
 <meta name="author" content="The Tagcloud Group">
 <meta name="description" content="Das Tagcloudprojekt in Webengineering und Projektmanagement">
 <title>Awesome Tagcloud</title>
-<link rel="shortcut icon" href="res/img/logo.png">
-<link rel="stylesheet" href="css/normalize.css" type="text/css">
-<link rel="stylesheet" href="css/main.css" type="text/css">
+<link rel="shortcut icon" href="static/res/img/logo.png">
+<link rel="stylesheet" href="static/css/normalize.css" type="text/css">
+<link rel="stylesheet" href="static/css/main.css" type="text/css">
