--- a/static/css/cloud.css
+++ b/static/css/cloud.css
@@ -16,6 +16,30 @@ h4 {
 	font-size: 0.7em;
 }
 
+#pause-button {
+	background-image: url("../res/img/pause.png");
+	background-size: 100%;
+	cursor: pointer;
+}
+
+#pause-button:hover {
+	background-image: url("../res/img/pause_hover.png");
+	background-size: 100%;
+	cursor: pointer;
+}
+
+#download-button {
+	background-image: url("../res/img/download.png");
+	background-size: 100%;
+	cursor: pointer;
+}
+
+#download-button:hover {
+	background-image: url("../res/img/download_hover.png");
+	background-size: 100%;
+	cursor: pointer;
+}
+
 .left-area {
 	width: 400px;
 	height: 100%;
@@ -34,9 +58,9 @@ h4 {
 }
 
 .navigation img {
-	margin-top: 10px;
-	width: 40px;
-	height: 40px;
+	margin-top: 35px;
+	width: 35px;
+	height: 35px;
 }
 
 .left-top-area {
@@ -66,6 +90,7 @@ h4 {
 	width: 40px;
 	margin: 0 10px;
 }
+
 .left-bottom-area h4 {
 	margin-left: 5px;
 	width: 120px;
@@ -73,11 +98,18 @@ h4 {
 }
 
 .mid-area {
-	height: 500px;
+	position: absolute;
+	top: 100px;
+	left: 200px;
+	min-height: 500px;
+	min-width: 800px;
 	background-color: black;
 	float: left;
-	min-width: 600px;
-	margin: 100px 0;
+}
+
+.mid-area canvas {
+	height: 500px;
+	width: 800px;
 }
 
 .right-area {
