--- a/static/css/cloud.css
+++ b/static/css/cloud.css
@@ -105,21 +105,24 @@ h4 {
 
 .mid-area {
 	position: absolute;
-	top: 100px;
-	left: 200px;
-	min-height: 500px;
-	min-width: 800px;
-	background-color: black;
+	top: 120px;
+	left: 15vw;
+	height: 70vh;
+	width: 65vw;
 	float: left;
+	min-height: 400px;
+	min-width: 720px;
 }
 
 .mid-area canvas {
-	height: 500px;
-	width: 800px;
+	border-style: dotted;
+	height: 100%;
+	width: 100%;
 }
 
 .right-area {
 	width: 300px;
+	height: 100%;
 	float: right;
 }
 
@@ -145,8 +148,19 @@ h4 {
 }
 
 .right-bottom-area canvas {
+	border-style: dotted;
 	float: right;
 	height: 250px;
 	width: 250px;
-	background-color: black;
+}
+
+
+@media only screen and (max-width: 1080px) and (max-height: 720px) {
+	.right-bottom-area {
+		visibility: hidden;
+	}
+
+	.left-bottom-area {
+		visibility: hidden;
+	}
 }
