--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,6 +20,8 @@ html, body {
 	font-family: "Roboto", Helvetica, sans-serif;
 	height: 100%;
 	width: 100%;
+	min-height: 600px;
+	min-width: 800px;
 }
 
 h1, h2, h3, h4, h5 {
