--- a/static/css/index-about.css
+++ b/static/css/index-about.css
@@ -14,7 +14,7 @@
 }
 .team {
   text-align: center;
-  background-color: #B6B6B6;
+  background-color: #BDBDBD;
 }
 .team-member {
   margin: 2%;
@@ -25,8 +25,10 @@
 }
 .disclaimer {
   padding: 15px;
-  background-color: #444;
+  color: black;
+  background-color: #BDBDBD;
 }
+
 .disclaimer a {
   color: #2196F3;
   text-decoration: none;
