--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,8 +20,10 @@ html, body {
 	font-family: "Roboto", Helvetica, sans-serif;
 	height: 100%;
 	width: 100%;
+	/* Bitch please...
 	min-height: 600px;
 	min-width: 800px;
+	*/
 }
 
 h1, h2, h3, h4, h5 {
