--- a/static/css/cloud.css
+++ b/static/css/cloud.css
@@ -18,24 +18,29 @@ h4 {
 
 #pause-button {
 	background-image: url("../res/img/pause.png");
+	background-repeat:no-repeat;
 	background-size: 100%;
 	cursor: pointer;
+
 }
 
 #pause-button:hover {
 	background-image: url("../res/img/pause_hover.png");
+	background-repeat:no-repeat;
 	background-size: 100%;
 	cursor: pointer;
 }
 
 #download-button {
 	background-image: url("../res/img/download.png");
+	background-repeat:no-repeat;
 	background-size: 100%;
 	cursor: pointer;
 }
 
 #download-button:hover {
 	background-image: url("../res/img/download_hover.png");
+	background-repeat:no-repeat;
 	background-size: 100%;
 	cursor: pointer;
 }
@@ -92,9 +97,12 @@ h4 {
 
 .left-bottom-area img {
 	float: left;
-	height: 40px;
-	width: 40px;
 	margin: 0 10px;
+	display:block;
+    width:0px;
+    height:0px;
+    outline:none;
+    padding:20px 20px;
 }
 
 .left-bottom-area h4 {
@@ -136,10 +144,13 @@ h4 {
 }
 
 .right-bottom-area img {
-	height: 40px;
-	width: 40px;
 	left: 5px;
 	float: right;
+	display:block;
+    width:0px;
+    height:0px;
+    outline:none;
+    padding:20px 20px;
 }
 
 .right-bottom-area canvas {
